--- a/flutter_utility/pubspec.yaml
+++ b/flutter_utility/pubspec.yaml
@@ -21,6 +21,9 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  google_maps_flutter: ^0.5.33
+  font_awesome_flutter: ^8.2.0
+  
   flutter:
     sdk: flutter
 
