--- a/server_utility/package.json
+++ b/server_utility/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/cristianunicam/utility#readme",
   "dependencies": {
-    "@googlemaps/google-maps-services-js": "^3.1.8"
+    "@googlemaps/google-maps-services-js": "^3.1.8",
+    "csv-parser": "^2.3.3",
+    "express": "^4.17.1",
+    "gpx-parse": "^0.10.4"
   }
 }
