--- a/server_utility/package.json
+++ b/server_utility/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.1.8",
     "csv-parser": "^2.3.3",
+    "csvtojson": "^2.0.10",
     "express": "^4.17.1",
     "gpx-parse": "^0.10.4"
   }
