--- a/flutter_utility/pubspec.yaml
+++ b/flutter_utility/pubspec.yaml
@@ -23,7 +23,10 @@ environment:
 dependencies:
   google_maps_flutter: ^0.5.33
   font_awesome_flutter: ^8.2.0
-  
+  sliding_sheet: ^0.4.0
+  charts_flutter: ^0.8.1
+  material_design_icons_flutter: ^4.0.5045
+
   flutter:
     sdk: flutter
 
@@ -50,6 +53,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/marche.jpg
+    - assets/map_theme/grey_theme.json
   #  - assets/images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
