--- a/flutter_utility/pubspec.yaml
+++ b/flutter_utility/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   sliding_sheet: ^0.4.0
   charts_flutter: ^0.8.1
   material_design_icons_flutter: ^4.0.5045
+  geolocator: ^6.0.0
 
   flutter:
     sdk: flutter
