--- a/flutter_utility/pubspec.yaml
+++ b/flutter_utility/pubspec.yaml
@@ -26,7 +26,10 @@ dependencies:
   sliding_sheet: ^0.4.0
   charts_flutter: ^0.8.1
   material_design_icons_flutter: ^4.0.5045
+  flutter_polyline_points: ^0.2.4
   geolocator: ^6.0.0
+  gpx: ^1.1.1
+  http: ^0.12.2
 
   flutter:
     sdk: flutter
