--- a/flutter_utility/android/app/build.gradle
+++ b/flutter_utility/android/app/build.gradle
@@ -37,16 +37,15 @@ android {
     }
 
     defaultConfig {
-        // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
         applicationId "com.cv.utility"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
-        // Read the API key from ./secure.properties into R.string.maps_api_key
+        // Read the API key from ./key.properties into R.string.maps_api_key
         def secureProps = new Properties()
-        if (file("../secure.properties").exists()) {
-                file("../secure.properties")?.withInputStream { secureProps.load(it) }
+        if (file("../key.properties").exists()) {
+                file("../key.properties")?.withInputStream { secureProps.load(it) }
         }
         resValue "string", "maps_api_key", (secureProps.getProperty("MAPS_API_KEY") ?: "")
     }
