--- a/flutter_utility/pubspec.yaml
+++ b/flutter_utility/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   google_maps_flutter: ^0.5.33
+  flutter_google_places: ^0.2.6
   font_awesome_flutter: ^8.2.0
   sliding_sheet: ^0.4.0
   charts_flutter: ^0.8.1
@@ -31,6 +32,7 @@ dependencies:
   gpx: ^1.1.1
   http: ^0.12.2
   fl_chart: ^0.11.1
+  provider: ^4.3.2+2
 
   flutter:
     sdk: flutter
