--- a/flutter_utility/pubspec.yaml
+++ b/flutter_utility/pubspec.yaml
@@ -21,7 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  google_maps_flutter: ^0.5.33
+  google_maps_flutter: ^1.0.3
+  google_maps_webservice: ^0.0.18
   flutter_google_places: ^0.2.6
   font_awesome_flutter: ^8.2.0
   sliding_sheet: ^0.4.0
