--- a/flutter_utility/pubspec.yaml
+++ b/flutter_utility/pubspec.yaml
@@ -60,7 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/marche.jpg
+    - assets/images/italy.png
     - assets/map_theme/grey_theme.json
   #  - assets/images/a_dot_ham.jpeg
 
